--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "phpunit/phpunit": "5.5.5",
     "fzaninotto/faker": "1.6.0",
     "bossa/phpspec2-expect": "2.0.0",
-    "vanare/behat-cucumber-json-formatter": "1.1.1"
+    "vanare/behat-cucumber-json-formatter": "1.1.1",
+    "emuse/behat-html-formatter": "0.1.*"
   },
   "config": {
     "bin-dir": "bin/"
